deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-application
  labels:
    app: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp-application
          image: httpd
          ports:
            - containerPort: 80
