deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-app-service
spec:
  selector:
    app: webapp
  type: NodePort
  ports:
    - protocol: TCP
      nodePort: 30000
      targetPort: 80
      port: 80
